Update Core, Add Gun, Update Lang
* add gun menu (temporary)
* block radio cmd
* blocking the zombie class selection menu when the barrier is removed
* add cfg rebb_reset_ent (returns the entity in its place)

--- a/lang/re_basebuilder.txt
+++ b/lang/re_basebuilder.txt
@@ -20,3 +20,4 @@ REBB_PREP_TIME = Время подготовки в секундах
 REBB_ZOMBIE_RESPAWN_DELAY = Время воскрешения зомби в секундах
 REBB_INFECTION_RESPAWN_DELAY = Время воскрешения инфицированного игрока
 REBB_BLOCK_DROP_WEAPON = Вкл/Выкл блокировку дропа оружия
+REBB_RESET_ENT = Возвращает строительные блоки в начале раунда на свои места
