Update Core, Lang
* add menu colors
* add lock blocks
* fix grab blocks
* pMove => PreThink

--- a/lang/re_basebuilder.txt
+++ b/lang/re_basebuilder.txt
@@ -14,6 +14,8 @@ REBB_PREP_HUMAN_SPAWN = ^4Люди появились, чтобы провери
 REBB_ZOMBIE_RELEASE = ^4ЗОМБИ ВЫШЛИ НА ОХОТУ!
 REBB_ZOMBIE_MENU = Зомби классы
 REBB_ZOMBIE_PICK = ^1Вы выбрали класс зомби:
+REBB_COLOR_MENU = Меню выбора цвета блоков
+REBB_COLOR_PICK = Вы выбрали цвет блоков:
 REBB_GAME_NAME = Имя игры в Server Browser
 REBB_BUILDING_TIME = Время стройки в секундах
 REBB_PREP_TIME = Время подготовки в секундах
@@ -21,3 +23,9 @@ REBB_ZOMBIE_RESPAWN_DELAY = Время воскрешения зомби в се
 REBB_INFECTION_RESPAWN_DELAY = Время воскрешения инфицированного игрока
 REBB_BLOCK_DROP_WEAPON = Вкл/Выкл блокировку дропа оружия
 REBB_RESET_ENT = Возвращает строительные блоки в начале раунда на свои места
+REBB_LOCK_BLOCKS = Вкл/Выкл блокировку строительных блоков
+REBB_MAX_LOCK_BLOCKS = Максимальное количество блокируемых строительных блоков
+REBB_LOCK_BLOCKS_UP = Вы успешно заблокировали блок
+REBB_LOCK_BLOCKS_LOST = Вы успешно разблокировали блок
+REBB_LOCK_BLOCKS_MAX = Вы привысили максимальное количество блоков
+REBB_LOCK_BLOCKS_FAIL = Заблокировать блок невозможно!
