Update Core, Gun
Core:
* fix color owner
* removed rendering of blocked blocks
* automatic opening of the weapon menu during the prep round
Gun:
* New Guns Menu
* Guns file rebb_guns_menu.ini

--- a/lang/re_basebuilder.txt
+++ b/lang/re_basebuilder.txt
@@ -16,7 +16,12 @@ REBB_ZOMBIE_MENU = Зомби классы
 REBB_ZOMBIE_PICK = ^1Вы выбрали класс зомби:
 REBB_COLOR_MENU = Меню выбора цвета блоков
 REBB_COLOR_PICK = Вы выбрали цвет блоков:
-REBB_COLOR_FAIL = Цвет ^4%s ^1занят игроком: 
+REBB_COLOR_FAIL = Цвет ^4%s ^1занят игроком:
+REBB_GUNS_MENU = Меню оружия 
+REBB_PRIMARY_MENU = Основное оружие
+REBB_SECONDARY_MENU = Пистолеты
+REBB_GUNS_BUY_SUCCESS = Вы успешно купили оружие:
+REBB_GUNS_BUY_FAIL = Покупка не удалась, у вас не хватает денег!
 REBB_MENU_NEXT = Далее
 REBB_MENU_BACK = Назад
 REBB_MENU_EXIT = Выход
