--- a/cstrike/addons/amxmodx/data/lang/re_basebuilder.txt
+++ b/cstrike/addons/amxmodx/data/lang/re_basebuilder.txt
@@ -10,7 +10,7 @@ REBB_PUSH = Отталкиваем...
 REBB_PULL = Притягиваем...
 REBB_BUILD_TIME = До конца стройки:
 REBB_PREP_TIME = До конца подготовки:
-REBB_PREP_HUMAN_SPAWN = ^4Люди появились, чтобы проверить свои постройки
+REBB_PREP_BUILDERS_SPAWN = ^4Строители появились, чтобы проверить свои постройки
 REBB_ZOMBIE_RELEASE = ^4ЗОМБИ ВЫШЛИ НА ОХОТУ!
 REBB_ZOMBIE_MENU = Зомби классы
 REBB_ZOMBIE_PICK = ^1Вы выбрали класс зомби:
